[package]
name = "synchrotron"
version = "0.1.0"
authors = ["Toby Lawrence <toby@nuclearfurnace.com>"]
edition = "2018"

[profile.release]
debug = true
lto = true
opt-level = 3

[profile.bench]
debug = true
opt-level = 3

[dependencies]
lazy_static = "^1.2"
phf = { version = "^0.7", features = ["macros"] }
nom = "^5.0"
derivative = "^1.0"
log = { version = "^0.4", features = ["max_level_trace", "release_max_level_info"] }
serde = "^1.0"
serde_derive = "^1.0"
#tokio = { git = "https://github.com/tokio-rs/tokio", features = ["rt-full"] }
#tokio-sync = { git = "https://github.com/tokio-rs/tokio", features = ["async-traits"] }
#tokio-executor = { git = "https://github.com/tokio-rs/tokio" }
#tokio-net = { git = "https://github.com/tokio-rs/tokio" }
tokio = { version = "0.2.0-alpha.6", features = ["rt-full"] }
tokio-sync = { version = "0.2.0-alpha.6", features = ["async-traits"] }
tokio-executor = { version = "0.2.0-alpha.6" }
tokio-net = { version = "0.2.0-alpha.6" }
tokio-test = { version = "0.2.0-alpha.6" }
futures-preview = { version = "0.3.0-alpha.19", features = ["async-await"] }
async-trait = "^0.1"
net2 = "^0.2"
libc = "^0.2"
signal-hook = "^0.1"
futures-turnstyle = { path = "../rust-futures-turnstyle" }
bytes = "^0.4"
btoi = "^0.4"
itoa = "^0.4"
rand = "^0.6"
rust-crypto = "^0.2"
pruefung = "^0.2"
fnv = "^1.0"
slab = "^0.4"
tokio-evacuate = { path = "../tokio-evacuate" }
metrics = { path = "../metrics/metrics" }
metrics-runtime = { path = "../metrics/metrics-runtime" }
lazycell = "1.2"
pin-project = "0.4.2"
tracing = "0.1.6"
tracing-fmt = "0.0.1-alpha.3"
tracing-log = "0.0.1-alpha.1"
tracing-futures = { path = "../tracing/tracing-futures", default-features = false, features = ["tokio-alpha"] }
quanta = "^0.3"
tower = "0.3.0-alpha.2"
tower-util = "0.3.0-alpha.1"

[dependencies.config]
version = "^0.9"
default-features = false
features = ["json"]

[dev-dependencies]
spectral = "^0.6"
matches = "^0.1"
lazy_static = "^1.4"
mockall = { version = "^0.5", features = ["nightly"] }
